--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "pug": "^3.0.2",
     "puppeteer": "^10.2.0",
     "socket.io": "^4.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   }
 }
