--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "npm run tsc"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "puppeteer": "^10.2.0",
