--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "puppeteer": "^10.2.0",
+    "puppeteer-extra": "^3.2.1",
+    "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-stealth": "^2.8.1",
     "puppeteer-stream": "^2.0.6",
     "socket.io": "^4.1.3"
   },
