--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "puppeteer": "^10.2.0",
     "puppeteer-extra": "^3.2.1",
     "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-devtools": "^2.3.1",
     "puppeteer-extra-plugin-stealth": "^2.8.1",
     "puppeteer-stream": "^2.0.6",
     "socket.io": "^4.1.3"
